--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "eslint-plugin-standard": "^2.0.1",
     "wepy-compiler-babel": "^1.5.1",
     "wepy-compiler-less": "^1.3.10",
+    "wepy-compiler-pug": "^1.4.6",
+    "wepy-compiler-stylus": "^1.3.10",
     "wepy-eslint": "^1.5.3",
     "wepy-plugin-uglifyjs": "^1.3.6"
   }
