--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "Hope",
   "license": "MIT",
   "dependencies": {
+    "@minui/wxc-loading": "^1.0.6",
+    "babel-plugin-syntax-export-extensions": "^6.13.0",
     "wepy": "^1.6.0",
     "wepy-async-function": "^1.4.4",
     "wepy-com-toast": "^1.0.2",
