refactor: [statistics]错题列表无限加载

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "wepy": "^1.6.0",
-    "wepy-async-function": "^1.4.4",
-    "wepy-redux": "^1.5.3"
+    "wepy-async-function": "^1.4.4"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.1",
