--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "author": "Hope",
   "license": "MIT",
   "dependencies": {
-    "wepy": "^1.6.0",
-    "wepy-async-function": "^1.4.4"
+    "wepy": "^1.7.1",
+    "wepy-async-function": "^1.4.4",
+    "wepy-compiler-sass": "^1.3.12"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.1",
@@ -31,8 +32,6 @@
     "eslint-plugin-standard": "^2.0.1",
     "wepy-compiler-babel": "^1.5.1",
     "wepy-compiler-less": "^1.3.10",
-    "wepy-compiler-sass": "0.0.3",
-    "wepy-compiler-stylus": "^1.3.10",
     "wepy-eslint": "^1.5.3"
   }
 }
